buildscript {
    ext {
        springCloudVersion = '2021.0.3'
    }
}

plugins {
    id 'org.springframework.boot' version '2.7.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
    id "org.sonarqube" version "3.4.0.2513"
    id "jacoco"
    id 'java'
    id 'com.google.cloud.tools.jib' version '3.3.0'
    id 'checkstyle'
    id 'pmd'
}

group = 'com.jjikmuk'
version = '0.0.1'
sourceCompatibility = '17'

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

configurations {
    asciidoctorExtensions // dependencies 에서 적용한 것 추가
    compileOnly {
        extendsFrom annotationProcessor
    }
}

jar {
    enabled = false
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'commons-validator:commons-validator:1.7'

    // Database
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'mysql:mysql-connector-java'

    // Dev
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.rest-assured:rest-assured'

    // API Docs
    testImplementation 'org.springframework.restdocs:spring-restdocs-restassured'
    asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'

    // TestContainers
    testImplementation "org.testcontainers:junit-jupiter:1.17.2"
    testImplementation "org.testcontainers:mysql:1.17.2"

    // Feign
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

    //Jwt
    compileOnly 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5', 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // WireMock
    testImplementation "org.springframework.cloud:spring-cloud-starter-contract-stub-runner"

    // aws : https://spring.io/blog/2021/03/17/spring-cloud-aws-2-3-is-now-available#why-has-the-package-name-changed
    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.2'
    testImplementation "org.testcontainers:localstack:1.17.3"
}

test {
    useJUnitPlatform()

    finalizedBy 'jacocoTestReport' // test -> jacocoTestReport
}

//-- Git submodule 관련 task ------------------------------------------------------
processResources.dependsOn('copyGitSubmodule')

task copyGitSubmodule(type: Copy) {
    from './config'
    into './src/main/resources'
    include '*.yml'
    include 'db/**'
}

//-- API 문서 관련 설정 -------------------------------------------------------
ext {
    snippetsDir = file("${project.buildDir}/generated-snippets")
}

asciidoctor {
    dependsOn test
    configurations 'asciidoctorExtensions'
    inputs.dir snippetsDir

    sources {
        include '**/index.adoc'
    }

    baseDirFollowsSourceFile()
}

asciidoctor.doFirst {
    delete file("${project.rootDir}/src/main/resources/static/docs")
}

task copyDocument(type: Copy) {
    dependsOn asciidoctor

    from "${project.buildDir}/docs/asciidoc"
    into "${project.rootDir}/src/main/resources/static/docs"
}

bootJar {
    dependsOn copyDocument
    copy {
        from "${project.buildDir}/docs/asciidoc"
        into "${project.buildDir}/resources/main/static/docs"
    }
}

//-- 코드 분석 관련 task ------------------------------------------------------

sonarqube {
    properties {
        property "sonar.projectKey", "jjik-muk_sikdorak"
        property "sonar.organization", "jjik-muk"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.java.checkstyle.reportPaths", "${project.buildDir}/reports/checkstyle/main.xml"
        property "sonar.java.pmd.reportPaths", "${project.buildDir}/reports/pmd/main.xml"
    }
}

jacocoTestReport {
    reports {
        xml.enabled true
    }
}

checkstyle {
    toolVersion = '10.3.2'
    ignoreFailures = true
    showViolations = false
    checkstyleTest.enabled = false
    configFile = file("${project.rootDir}/config-static-analyzer/checkstyle/custom-google-checkstyle.xml")
}

tasks.withType(Checkstyle) {
    reports {
        xml.required = true
        html.required = true
    }
}

pmd {
    toolVersion = "6.48.0"
//    consoleOutput = true
    ignoreFailures = true
    pmdTest.enabled = false
    ruleSetFiles = files("config-static-analyzer/pmd/custom-pmd-rules.xml")
    ruleSets = []
//    ruleSets = ["category/java/bestpractices.xml", "category/java/errorprone.xml"]
}

if(project.hasProperty('dev')) {
    apply from: rootProject.file('config-docker/profile_dev.gradle')
} else if(project.hasProperty('prod')) {
    apply from: rootProject.file('config-docker/profile_prod.gradle')
}
